Errors
<kernel>:742:2: error: unknown type name 'cl_float2'; did you mean 'float2'?
        cl_float2               mouse_coords;
        ^~~~~~~~~
        float2
cl_kernel.h:140:1: note: 'float2' declared here
__NV_DECLARE_VECT_TYPES(float,           float)
^
cl_kernel.h:113:55: note: expanded from macro '__NV_DECLARE_VECT_TYPES'
typedef __attribute__(( ext_vector_type(2)  ))  CTYPE CLTYPE##2;  \
                                                      ^
<scratch space>:47:1: note: expanded from here
float2
^

